<resources>
    <string name="app_name">Mybrary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="mybrary_logo">Jaguars Logo</string>
    <string name="book_title">Book Title</string>
    <string name="author_last_name">Author Last Name</string>
    <string name="book_category">Book Category</string>
    <string name="author_first_name">Author First Name</string>
    <string name="book_call_number">Book Call Number</string>
    <string name="number_of_likes">Number of Likes</string>
    <string name="user_name">User Name</string>
    <string name="checked_out_date">Checked Out Date</string>
    <string name="to">to</string>
    <string name="due_date">Due Date</string>
    <string name="checked_out_id">Checked Out ID</string>
    <string name="boolean_liked">Boolean Liked</string>
    <string name="create_account">Create Account</string>
    <string name="no_account"><u>No account yet? Create One</u></string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="head_image_at_sign_up">Head Image at Sign Up</string>
    <string name="save_username">Save Username</string>
    <string name="save_password">Save Password</string>
    <string name="book_description">Book Description</string>
    <string name="date_checked_out">Date Checked Out</string>
    <string name="date_due">Date Due</string>
    <string name="logged_in_user">Logged In User</string>
    <string name="stay_logged_in">Stay Logged In</string>
    <string name="book_id">Book ID</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="library_barcode_number">Library Barcode Number (6 digit code)</string>
    <string name="change_password">Change Password</string>
    <string name="report_bug">Report Bug</string>
    <string name="your_fines">Your Fines:</string>
</resources>
