<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codegeek.fblalibraryapp.UniversalCheckedOutBook">

    <TextView
        android:id="@+id/bookTitleUniversal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>
<!--
    <TextView
        android:id="@+id/authorFirstNameUniversal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitleUniversal"
        android:text="@string/author_first_name"
        android:textColor="@color/black"
        android:visibility="visible" />-->

    <TextView
        android:id="@+id/authorLastNameUniversal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitleUniversal"
        android:text="@string/author_last_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/bookCategoryUniversal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/authorLastNameUniversal"
        android:text="@string/book_category"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/bookCallNumberUniversal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookCategoryUniversal"
        android:text="@string/book_call_number"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/bookLikesUniversal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookCallNumberUniversal"
        android:text="@string/number_of_likes"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookLikesUniversal"
        android:text="@string/book_description"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dateCheckedOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookDescription"
        android:text="@string/date_checked_out"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookDescription"
        android:layout_toEndOf="@+id/dateCheckedOut"
        android:layout_marginStart="25dp"
        android:text="———"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dateCheckedDue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookDescription"
        android:layout_toEndOf="@+id/dateCheckedOut"
        android:layout_marginStart="100dp"
        android:text="@string/date_due"
        android:textColor="@color/red"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/loggedInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateCheckedOut"
        android:text="@string/logged_in_user"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>
