<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_book_databse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/book_title"
        android:textColor="#000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookName"
        android:text="@string/user_name"
        android:textColor="#000"
        android:visibility="visible" />

    <TextView
        android:id="@+id/outDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userName"
        android:text="@string/checked_out_date"
        android:textColor="#9b870c" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/outDate"
        android:text="@string/to" />

    <TextView
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_toEndOf="@+id/toText"
        android:text="@string/due_date"
        android:textColor="#ff22" />

    <com.like.LikeButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/outDate"
        app:icon_size="20dp"
        app:icon_type="thumb" />

    <TextView
        android:id="@+id/checkedOutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/like_button"
        android:text="@string/checked_out_id"
        android:visibility="gone" />

    <TextView
        android:id="@+id/bookIdAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/like_button"
        android:layout_toEndOf="@+id/checkedOutId"
        android:text="@string/book_id"
        android:visibility="visible" />

    <TextView
        android:id="@+id/numberOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outDate"
        android:layout_toEndOf="@+id/like_button"
        android:text="@string/number_of_likes" />


    <TextView
        android:id="@+id/booleanLiked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outDate"
        android:layout_toEndOf="@+id/numberOfLikes"
        android:text="@string/boolean_liked"
        android:visibility="gone" />


    <TextView
        android:id="@+id/libraryId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outDate"
        android:layout_toEndOf="@+id/numberOfLikes"
        android:text="@string/boolean_liked"
        android:visibility="gone" />
<!--

    <TextView
        android:id="@+id/checkedOutId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outDate"
        android:layout_toEndOf="@+id/numberOfLikes"
        android:text="@string/boolean_liked"
        android:visibility="gone" />-->

</RelativeLayout>