<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_book_databse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.codegeek.fblalibraryapp.BookDatabaseFragment">

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/book_title"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="17sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/authorLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bookTitle"
        android:text="@string/author_last_name"
        android:textColor="#000" />

    <TextView
        android:id="@+id/bookCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/authorLastName"
        android:text="@string/book_category"
        android:textColor="#ff22" />

    <TextView
        android:id="@+id/bookCallNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bookCategory"
        android:text="@string/book_call_number"
        android:textColor="#f239"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/bookId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberOfLikes"
        android:text="@string/book_id"
        android:visibility="visible"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/numberOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookCallNumber"
        android:layout_marginEnd="23dp"
        android:text="@string/number_of_likes" />
</RelativeLayout>