<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayoutLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/logInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/logInEmailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/logInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logInEmail"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/logInPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logInPassword"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short" />

        <LinearLayout
            android:id="@+id/saveOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_sign_in_button"
            android:weightSum="3">

            <CheckBox
                android:id="@+id/saveUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_in_button"
                android:layout_weight="1"
                android:text="@string/save_username" />

            <CheckBox
                android:id="@+id/savePassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_in_button"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/saveUsername"
                android:layout_weight="1"
                android:text="@string/save_password" />

            <CheckBox
                android:id="@+id/stayLoggedIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_in_button"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/savePassword"
                android:layout_weight="1"
                android:text="@string/stay_logged_in" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/createAccountText"
            android:layout_below="@+id/saveOptions"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_password"
            android:textColor="@color/hyperlinkColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/no_account"
            android:textColor="@color/hyperlinkColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/accountLayoutLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.mindorks.placeholderview.PlaceHolderView
                    android:id="@+id/galleryView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/log_in_container"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="@android:color/white"
                tools:ignore="RtlHardcoded">

                <com.mindorks.placeholderview.PlaceHolderView
                    android:id="@+id/drawerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
            </FrameLayout>
        </android.support.v4.widget.DrawerLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refreshListAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/logOutButton">

            <ListView
                android:id="@+id/accountListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/logOutButton"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:divider="#000"
                android:dividerHeight="1dip"
                android:focusable="true"
                tools:ignore="RtlHardcoded" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/log_out"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/head_image_at_sign_up"
                android:src="@drawable/mybrary_logo" />

            <!-- First Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/signUpFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!-- Last Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/signUpLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPostalAddress" />
            </android.support.design.widget.TextInputLayout>


            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/signUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!-- Library barcode number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/libraryIdSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/library_barcode_number"
                    android:inputType="number"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>


            <!-- Phone Number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/signUpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Re-enter Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/signUpPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- SignUp Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/alreadyMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/already_a_member_login"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>